# jupyter

./: README.md  pyproject.toml
notes/: 01_vector.ipynb  02_matrix.ipynb  03_linear_equation.ipynb  B1_matplotlib.ipynb
