[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["kerobot"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^3.1.0"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
sympy = "^1.12"
scipy = "^1.13.0"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
